noinst_HEADERS =                    \
    assert.hh                       \
    bootstrap-complete-event.hh     \
    command-line.hh                 \
    connection.hh                   \
    errno_exception.hh              \
    event.hh                        \
    fault.hh                        \
    fnv_hash.hh                     \
    hash_func.hh                    \
    hash.hh                         \
    hash_map.hh                     \
    hash_set.hh                     \
    network_archive.hh              \
    network_iarchive.hh             \
    network_oarchive.hh             \
    new-connection-event.hh         \
    packets.h                       \
    shutdown-event.hh               \
    sigset.hh                       \
    stable_list.hh                  \
    stable_map.hh                   \
    string.hh                       \
    timeval.hh                      \
    type-props.h                    \
    vlog-socket.hh                  \
    vlog.hh                         \
    xtoxll.h                        \
    netinet++/arp.hh                \
    netinet++/bpdu.hh               \
    netinet++/cidr.hh               \
    netinet++/ethernet.hh           \
    netinet++/datapathid.hh         \
    netinet++/ethernetaddr.hh       \
    netinet++/ip.hh                 \
    netinet++/ipaddr.hh             \
    netinet++/llc.hh                \
    netinet++/static_lib.hh         \
    netinet++/tcp.hh                \
    netinet++/vlan.hh
